--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="row wow bounceInUp" data-wow-duration="1.4s">
           <div class="col-lg-5 col-md-6 qimage">
             <div class="about-img">
-              <img style="padding: 20px" src="./img/Q.png" alt="" />
+              <img style="padding: 20px" src="./img/Q2.png" alt="" />
             </div>
           </div>
 
